--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "atom": ">0.50.0"
   },
   "dependencies": {
-    "ansi-to-html": "~0.1.0"
+    "ansi-to-html": "~0.1.0",
+    "request-promise" : "~0.1.2",
+    "bluebird" : "~2.3.2"
   }
 }
