--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "main": "./lib/atom-sharper/atom-sharper",
   "version": "0.0.0",
   "description": "Brings the wonderful omnisharp server to powercharge atom's C# development experience",
-  "activationEvents": ["atom-sharper:toggle"],
+  "activationEvents": [
+    "atom-sharper:toggle"
+  ],
   "repository": "https://github.com/Mpdreamz/atom-sharper",
   "license": "MIT",
   "engines": {
@@ -11,7 +13,16 @@
   },
   "dependencies": {
     "ansi-to-html": "~0.1.0",
-    "request-promise" : "~0.1.2",
-    "bluebird" : "~2.3.2"
+    "request-promise": "~0.1.2",
+    "bluebird": "~2.3.2",
+    "jquery": "^2.1.1"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.6.0",
+    "grunt": "^0.4.5",
+    "grunt-coffeelint": "0.0.13",
+    "grunt-contrib-coffee": "^0.11.1",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
