started following atom design style guide, groundworks for an MVVM error dialog, working on populating it from /syntaxerrors

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ansi-to-html": "~0.1.0",
     "request-promise" : "~0.1.2",
-    "bluebird" : "~2.3.2"
+    "bluebird" : "~2.3.2",
+    "vue": "~0.10.6"
   }
 }
