--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "bluebird" : "~2.3.2",
     "vue": "~0.10.6",
     "underscore": "~1.7.0"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.6.0",
+    "grunt": "^0.4.5",
+    "grunt-coffeelint": "0.0.13",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
