--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ansi-to-html": "~0.1.0",
     "request-promise" : "~0.1.2",
     "bluebird" : "~2.3.2",
+    "event-kit": "git+https://github.com/atom/event-kit",
+    "fs-plus": "^2.3.1",
     "vue": "~0.10.6",
     "underscore": "~1.7.0",
     "autocomplete-plus-async": "git+https://github.com/HaxeIDE/atom-autocomplete-plus-async.git",
