--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "ansi-to-html": "~0.1.0",
-    "request-promise" : "~0.1.2",
-    "bluebird" : "~2.3.2",
+    "request-promise": "~0.1.2",
+    "bluebird": "~2.3.2",
     "event-kit": "0.7.2",
     "fs-plus": "^2.3.1",
     "vue": "~0.10.6",
     "underscore": "~1.7.0",
     "autocomplete-plus-async": "git+https://github.com/HaxeIDE/atom-autocomplete-plus-async.git",
-    "jquery": "^2.1.1"
+    "jquery": "^2.1.1",
+    "omnisharp-server-binaries": "^0.1.3"
   },
   "devDependencies": {
     "coffeelint": "^1.6.0",
