--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "atom-sharper",
-  "main": "./lib/atom-sharper/atom-sharper",
+  "name": "omnisharp-atom",
+  "main": "./lib/omnisharp-atom/omnisharp-atom",
   "version": "0.1.4",
   "description": "Brings the wonderful omnisharp server to powercharge atom's C# development experience",
   "activationEvents": [],
-  "repository": "https://github.com/Mpdreamz/atom-sharper",
+  "repository": "https://github.com/OmniSharp/omnisharp-atom",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
