under previous port checking it was possible to get "Detected an OmniSharp instance already running on port XXX" messages, seems there was a race condition where it would not detect that a port was in use correctly.  This commit uses the `find-free-port` module, which is a similar implementation to the method used to find free port in the omnisharp-brackets project.

--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "ansi-to-html": "~0.1.0",
-    "request-promise": "~0.1.2",
+    "autocomplete-plus-async-plus": "latest",
     "bluebird": "~2.3.2",
     "event-kit": "0.7.2",
+    "find-free-port": "^1.0.1",
     "fs-plus": "^2.3.1",
-    "vue": "~0.10.6",
-    "underscore": "~1.7.0",
-    "autocomplete-plus-async-plus": "latest",
     "jquery": "^2.1.1",
-    "omnisharp-server-binaries": "latest"
+    "omnisharp-server-binaries": "latest",
+    "request-promise": "~0.1.2",
+    "underscore": "~1.7.0",
+    "vue": "~0.10.6"
   },
   "devDependencies": {
     "coffeelint": "^1.6.0",
