Changing package requirements for `autocomplete-plus` and `language-csharp` to temporarily avoid caret ranges to fix compatibility.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "grunt-contrib-watch": "^0.6.1"
   },
   "apmPackageDependencies": {
-    "autocomplete-plus": "^2.0.2",
-    "language-csharp": "^0.3.0"
+    "autocomplete-plus": ">=2.0.2",
+    "language-csharp": ">=0.3.0"
   }
 }
