relaxed language-csharp package version dependency fix #59

--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
   },
   "apmPackageDependencies": {
     "autocomplete-plus": "^2.0.2",
-    "language-csharp": "^0.3.0"
+    "language-csharp": ">=0.3.0"
   }
 }
