--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "omnisharp-atom",
   "main": "./lib/omnisharp-atom/omnisharp-atom",
   "version": "0.2.1",
-  "description": "Brings the wonderful omnisharp server to powercharge atom's C# development experience",
+  "description": "Brings the wonderful OmniSharp server to powercharge Atom's C# development experience",
   "activationEvents": [],
   "repository": "https://github.com/OmniSharp/omnisharp-atom",
   "license": "MIT",
