--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "dependencies": {
     "ansi-to-html": "~0.1.0",
+    "atom-space-pen-views": "^2.0.3",
     "bluebird": "~2.3.2",
     "event-kit": "0.7.2",
     "freeport": "^1.0.4",
     "fs-plus": "^2.3.1",
     "jquery": "^2.1.1",
+    "lodash": "^3.6.0",
     "omnisharp-server-roslyn-binaries": "latest",
     "request-promise": "~0.1.2",
     "semver": "^4.2.0",
-    "underscore": "~1.7.0",
-    "vue": "~0.10.6",
-    "atom-space-pen-views": "^2.0.3"
+    "vue": "~0.10.6"
   },
   "consumedServices": {
     "status-bar": {
