Converted more views to ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,12 @@
         "./lib/omnisharp-atom/dependency-checker.ts",
         "./lib/omnisharp-atom/features/lib/completion-provider.ts",
         "./lib/omnisharp-atom/omnisharp-atom.ts",
+        "./lib/omnisharp-atom/views/build-output-pane-view.ts",
         "./lib/omnisharp-atom/views/dock-view.ts",
+        "./lib/omnisharp-atom/views/error-pane-view.ts",
+        "./lib/omnisharp-atom/views/find-pane-view.ts",
+        "./lib/omnisharp-atom/views/omni-output-pane-view.ts",
+        "./lib/omnisharp-atom/views/rename-view.ts",
         "./lib/omnisharp-atom/views/status-bar-view.ts",
         "./lib/typings.d.ts",
         "./typings/atom/atom.d.ts",
