Convert build.coffee -> build.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,15 @@
         "./lib/omni-sharp-server/omni-sharp-server.ts",
         "./lib/omni-sharp-server/omni.ts",
         "./lib/omnisharp-atom/dependency-checker.ts",
+        "./lib/omnisharp-atom/features/build.ts",
+        "./lib/omnisharp-atom/features/code-format.ts",
+        "./lib/omnisharp-atom/features/error-handler.ts",
+        "./lib/omnisharp-atom/features/find-usages.ts",
+        "./lib/omnisharp-atom/features/fix-usings.ts",
+        "./lib/omnisharp-atom/features/go-to-definition.ts",
         "./lib/omnisharp-atom/features/lib/completion-provider.ts",
+        "./lib/omnisharp-atom/features/rename.ts",
+        "./lib/omnisharp-atom/features/syntax-errors.ts",
         "./lib/omnisharp-atom/omnisharp-atom.ts",
         "./lib/omnisharp-atom/views/build-output-pane-view.ts",
         "./lib/omnisharp-atom/views/dock-view.ts",
