Convert omnisharp-atom-spec.coffee -> omnisharp-atom-spec.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,9 +49,12 @@
         "./lib/omnisharp-atom/views/rename-view.ts",
         "./lib/omnisharp-atom/views/status-bar-view.ts",
         "./lib/typings.d.ts",
+        "./spec/omnisharp-atom-spec.ts",
+        "./spec/typings.d.ts",
         "./typings/atom/atom.d.ts",
         "./typings/bluebird/bluebird.d.ts",
         "./typings/emissary/emissary.d.ts",
+        "./typings/jasmine/jasmine.d.ts",
         "./typings/jquery/jquery.d.ts",
         "./typings/lodash/lodash.d.ts",
         "./typings/mixto/mixto.d.ts",
