--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "apmPackageDependencies": {
     "autocomplete-plus": "^2.0.2",
-    "language-csharp": ">=0.3.0"
+    "language-csharp": ">=0.3.0",
+    "linter": ">=0.12.0"
   }
 }
