Added install script to automatically install the typings.  Simplified the tsconfig so that it will only add the tsd.d.ts file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,8 @@
     "compileOnSave": false,
     "filesGlob": [
         "./**/*.ts",
+        "!./spec/typings.d.ts",
+        "!./typings/**/*.ts",
         "!./node_modules/**/*.ts"
     ],
     "files": [
@@ -50,22 +52,7 @@
         "./lib/omnisharp-atom/views/status-bar-view.ts",
         "./lib/typings.d.ts",
         "./spec/omnisharp-atom-spec.ts",
-        "./spec/typings.d.ts",
-        "./typings/atom/atom.d.ts",
-        "./typings/bluebird/bluebird.d.ts",
-        "./typings/emissary/emissary.d.ts",
-        "./typings/jasmine/jasmine.d.ts",
-        "./typings/jquery/jquery.d.ts",
-        "./typings/lodash/lodash.d.ts",
-        "./typings/mixto/mixto.d.ts",
-        "./typings/node/node.d.ts",
-        "./typings/pathwatcher/pathwatcher.d.ts",
-        "./typings/q/Q.d.ts",
-        "./typings/semver/semver.d.ts",
-        "./typings/space-pen/space-pen.d.ts",
-        "./typings/status-bar/status-bar.d.ts",
-        "./typings/text-buffer/text-buffer.d.ts",
-        "./typings/tsd.d.ts",
-        "./typings/vue/vue.d.ts"
+        "./spec/tsd.d.ts",
+        "./tsd.d.ts"
     ]
 }
