--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "engines": {
     "atom": ">0.50.0"
   },
+  "scripts": {
+    "postinstall": "tsd reinstall"
+  },
   "dependencies": {
     "ansi-to-html": "~0.1.0",
     "atom-space-pen-views": "^2.0.3",
@@ -21,7 +24,8 @@
     "omnisharp-server-roslyn-binaries": "latest",
     "request-promise": "~0.1.2",
     "semver": "^4.2.0",
-    "vue": "~0.10.6"
+    "vue": "~0.10.6",
+    "tsd": "~0.6.0-beta.5"
   },
   "consumedServices": {
     "status-bar": {
