--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "main": "./lib/omnisharp-atom/omnisharp-atom",
   "version": "0.2.1",
   "description": "Brings the wonderful OmniSharp server to powercharge Atom's C# development experience",
-  "activationEvents": [],
+  "activationCommands": [],
   "repository": "https://github.com/OmniSharp/omnisharp-atom",
   "license": "MIT",
   "engines": {
-    "atom": ">0.50.0"
+    "atom": ">0.190.0"
   },
   "scripts": {
     "postinstall": "tsd reinstall"
   },
   "dependencies": {
     "ansi-to-html": "~0.1.0",
-    "atom-space-pen-views": "^2.0.3",
+    "atom-space-pen-views": "^2.0.5",
     "bluebird": "~2.3.2",
     "event-kit": "0.7.2",
     "freeport": "^1.0.4",
@@ -30,7 +30,7 @@
   "consumedServices": {
     "status-bar": {
       "versions": {
-        "^0.58.0": "consumeStatusBar"
+        "^1.0.0": "consumeStatusBar"
       }
     }
   },
