--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "https://github.com/OmniSharp/omnisharp-atom",
   "license": "MIT",
   "engines": {
-    "atom": ">0.50.0"
+    "atom": ">=0.192.0 <2.0.0"
   },
   "linter-package": true,
   "linter-implementation": "omnisharp-atom/linter",
