--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "./lib/omnisharp-atom/omnisharp-atom",
   "version": "0.2.1",
   "description": "Brings the wonderful OmniSharp server to powercharge Atom's C# development experience",
+  "keywords": ["c#", ".net", "asp.net", "omnisharp"],
   "activationCommands": [],
   "repository": "https://github.com/OmniSharp/omnisharp-atom",
   "license": "MIT",
