--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
   "scripts": {
     "postinstall": "tsd reinstall"
   },
-  "linter-package": true,
-  "linter-implementation": "omnisharp-atom/linter",
   "dependencies": {
     "ansi-to-html": "~0.1.0",
     "atom-space-pen-views": "^2.0.5",
@@ -29,18 +27,26 @@
     "event-kit": "0.7.2",
     "freeport": "^1.0.4",
     "fs-plus": "^2.3.1",
+    "generator-aspnet": "0.0.32",
     "jquery": "^2.1.1",
     "lodash": "^3.6.0",
     "omnisharp-server-roslyn-binaries": "latest",
     "request-promise": "~0.1.2",
     "semver": "^4.2.0",
     "tsd": "~0.6.0-beta.5",
-    "vue": "~0.10.6"
+    "vue": "~0.10.6",
+    "yeoman-environment": "^1.2.5",
+    "yo": "^1.4.6"
   },
   "consumedServices": {
     "status-bar": {
       "versions": {
         "^1.0.0": "consumeStatusBar"
+      }
+    },
+    "yeoman-environment": {
+      "versions": {
+        "^1.0.0": "consumeYeomanEnvironment"
       }
     }
   },
