--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "linter-implementation": "omnisharp-atom/linter",
   "dependencies": {
     "ansi-to-html": "~0.1.0",
+    "atom-package-dependencies": "https://github.com/basarat/atom-package-dependencies/archive/cb1.tar.gz",
     "atom-space-pen-views": "^2.0.5",
     "bluebird": "~2.3.2",
     "event-kit": "0.7.2",
@@ -58,7 +59,7 @@
     "grunt-coffeelint": "0.0.13",
     "grunt-contrib-watch": "^0.6.1"
   },
-  "apmPackageDependencies": {
+  "package-dependencies": {
     "autocomplete-plus": "^2.0.2",
     "language-csharp": ">=0.3.0",
     "linter": ">=0.12.0"
