added @will to the contributors list
Sorry for missing you in the first round!

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     { "name": "Chad Tolkien", "url": "http://chad.tolkien.id.au/" },
     { "name": "David Driscoll", "url": "https://twitter.com/david_blacklite" },
     { "name": "Sam Williamson", "url": "https://twitter.com/sgwill" },
+    { "name": "William Luu", "url": "https://twitter.com/willl" },
     { "name": "Jason Imison", "url": "https://twitter.com/jasonimison" }
   ],
   "license": "MIT",
