updated .travis.yml to reference script locally (so that PR's do not build master's script file) and removed old build scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ notifications:
     on_success: never
     on_failure: change
 
-script: 'curl -s https://raw.githubusercontent.com/OmniSharp/omnisharp-atom/master/build-package.sh | sh'
+script: ./build-package.sh 
 
 git:
   depth: 10
