--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
         "./lib/models.d.ts",
         "./lib/omni-sharp-server/omni-sharp-server.ts",
         "./lib/omni-sharp-server/omni.ts",
+        "./lib/omni-sharp-server/project-finder.ts",
         "./lib/omnisharp-atom/dependency-checker.ts",
         "./lib/omnisharp-atom/features/build.ts",
         "./lib/omnisharp-atom/features/code-format.ts",
