--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
   "package-dependencies": {
     "autocomplete-plus": "^2.0.2",
     "language-csharp": ">=0.3.0",
-    "linter": ">=0.12.0"
+    "linter": ">=0.12.0",
+    "atom-yeoman": ">=0.1.5"
   }
 }
