Added node client to packages.json

--- a/package.json
+++ b/package.json
@@ -64,10 +64,11 @@
     "bluebird": "~2.3.2",
     "event-kit": "0.7.2",
     "fs-plus": "^2.3.1",
-    "glob": "^5.0.5",
     "generator-aspnet": "0.0.32",
+    "glob": "^5.0.5",
     "jquery": "^2.1.1",
     "lodash": "^3.6.0",
+    "omnisharp-node-client": "^1.1.2",
     "request-promise": "~0.1.2",
     "rx": "^2.5.2",
     "semver": "^4.2.0",
