--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "bluebird": "~2.3.2",
     "event-kit": "0.7.2",
     "fs-plus": "^2.3.1",
+    "fuzzaldrin": "^2.1.0",
     "generator-aspnet": "0.0.32",
     "glob": "^5.0.5",
     "grunt": "^0.4.5",
