--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   "linter-package": true,
   "linter-implementation": "omnisharp-atom/linter",
   "scripts": {
-    "postinstall": "tsd reinstall"
+    "postinstall": "tsd reinstall & grunt copy --force & grunt clean --force"
   },
   "dependencies": {
     "ansi-to-html": "~0.1.0",
@@ -68,6 +68,9 @@
     "glob": "^5.0.5",
     "jquery": "^2.1.1",
     "lodash": "^3.6.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.0",
     "omnisharp-node-client": "^1.1.3",
     "request-promise": "~0.1.2",
     "rx": "^2.5.2",
@@ -99,7 +102,6 @@
   },
   "devDependencies": {
     "coffeelint": "^1.6.0",
-    "grunt": "^0.4.5",
     "grunt-coffeelint": "0.0.13",
     "grunt-contrib-watch": "^0.6.1"
   },
