--- a/package.json
+++ b/package.json
@@ -66,11 +66,12 @@
     "fs-plus": "^2.3.1",
     "generator-aspnet": "0.0.32",
     "glob": "^5.0.5",
-    "jquery": "^2.1.1",
-    "lodash": "^3.6.0",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
+    "jquery": "^2.1.1",
+    "lodash": "^3.6.0",
     "omnisharp-node-client": "^1.1.4",
     "request-promise": "~0.1.2",
     "rx": "^2.5.2",
