Added typelookup to atom, based on atom-typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,7 @@
         "./lib/omnisharp-atom/features/go-to-definition.ts",
         "./lib/omnisharp-atom/features/go-to-implementation.ts",
         "./lib/omnisharp-atom/features/lib/completion-provider.ts",
+        "./lib/omnisharp-atom/features/lookup.ts",
         "./lib/omnisharp-atom/features/package-restore.ts",
         "./lib/omnisharp-atom/features/rename.ts",
         "./lib/omnisharp-atom/linter.ts",
@@ -50,6 +51,7 @@
         "./lib/omnisharp-atom/views/omni-output-pane-view.ts",
         "./lib/omnisharp-atom/views/rename-view.ts",
         "./lib/omnisharp-atom/views/status-bar-view.ts",
+        "./lib/omnisharp-atom/views/tooltip-view.ts",
         "./lib/typings.d.ts",
         "./spec/omnisharp-atom-spec.ts",
         "./spec/tsd.d.ts",
