--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,7 @@
         "./lib/omnisharp-atom/features/go-to-definition.ts",
         "./lib/omnisharp-atom/features/go-to-implementation.ts",
         "./lib/omnisharp-atom/features/intellisense.ts",
+        "./lib/omnisharp-atom/features/lib/apply-changes.ts",
         "./lib/omnisharp-atom/features/lib/completion-provider.ts",
         "./lib/omnisharp-atom/features/lookup.ts",
         "./lib/omnisharp-atom/features/package-restore.ts",
