--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,8 @@ install:
   - "%LOCALAPPDATA%/atom/bin/apm install"
 
 build_script:
-  - cd %APPVEYOR_BUILD_FOLDER%
-  - "%LOCALAPPDATA%/atom/bin/apm test --path %LOCALAPPDATA%/atom/bin/atom.cmd"
+#  - cd %APPVEYOR_BUILD_FOLDER%
+# - "%LOCALAPPDATA%/atom/bin/apm test --path %LOCALAPPDATA%/atom/bin/atom.cmd"
 
 test: off
 
