--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
     "fuzzaldrin": "^2.1.0",
     "generator-aspnet": "0.0.32",
     "glob": "^5.0.5",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.8.0",
+    "gulp": "^3.8.11",
+    "gulp-newer": "^0.5.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-util": "^3.0.4",
     "jquery": "^2.1.1",
     "lodash": "^3.6.0",
     "omnisharp-node-client": "^1.1.4",
