--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
         "./lib/omni-sharp-server/client.ts",
         "./lib/omni-sharp-server/omni.ts",
         "./lib/omnisharp-atom/dependency-checker.ts",
+        "./lib/omnisharp-atom/features/code-check.ts",
         "./lib/omnisharp-atom/features/code-format.ts",
         "./lib/omnisharp-atom/features/error-handler.ts",
         "./lib/omnisharp-atom/features/find-usages.ts",
@@ -48,6 +49,7 @@
         "./lib/omnisharp-atom/linter.ts",
         "./lib/omnisharp-atom/omnisharp-atom.ts",
         "./lib/omnisharp-atom/views/build-output-pane-view.ts",
+        "./lib/omnisharp-atom/views/codecheck-output-pane-view.ts",
         "./lib/omnisharp-atom/views/dock-view.ts",
         "./lib/omnisharp-atom/views/find-pane-view.ts",
         "./lib/omnisharp-atom/views/omni-output-pane-view.ts",
