Updated tsconfig to turn on compileOnSave

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
         "placeOpenBraceOnNewLineForFunctions": false,
         "placeOpenBraceOnNewLineForControlBlocks": false
     },
-    "compileOnSave": false,
+    "compileOnSave": true,
     "filesGlob": [
         "./**/*.ts",
         "!./typings/**/*.d.ts",
