--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "atom-space-pen-views": "^2.0.5",
     "bluebird": "~2.3.2",
     "del": "^1.1.1",
+    "escape-html": "^1.0.1",
     "event-kit": "0.7.2",
     "fs-plus": "^2.3.1",
     "fuzzaldrin": "^2.1.0",
