wip: created view

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -70,6 +70,7 @@
         "./lib/omnisharp-atom/views/omni-output-pane-view.ts",
         "./lib/omnisharp-atom/views/react-client-component.ts",
         "./lib/omnisharp-atom/views/rename-view.ts",
+        "./lib/omnisharp-atom/views/signature-help-view.ts",
         "./lib/omnisharp-atom/views/solution-status-view.ts",
         "./lib/omnisharp-atom/views/status-bar-view.ts",
         "./lib/omnisharp-atom/views/tooltip-view.ts",
