Adding symbol lookup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,12 +38,14 @@
         "./lib/omnisharp-atom/features/code-check.ts",
         "./lib/omnisharp-atom/features/code-format.ts",
         "./lib/omnisharp-atom/features/error-handler.ts",
+        "./lib/omnisharp-atom/features/find-symbols.ts",
         "./lib/omnisharp-atom/features/find-usages.ts",
         "./lib/omnisharp-atom/features/go-to-definition.ts",
         "./lib/omnisharp-atom/features/go-to-implementation.ts",
         "./lib/omnisharp-atom/features/intellisense.ts",
         "./lib/omnisharp-atom/features/lib/apply-changes.ts",
         "./lib/omnisharp-atom/features/lib/completion-provider.ts",
+        "./lib/omnisharp-atom/features/lib/omni-select-list-view.ts",
         "./lib/omnisharp-atom/features/lookup.ts",
         "./lib/omnisharp-atom/features/navigate-up-down.ts",
         "./lib/omnisharp-atom/features/notification-handler.ts",
@@ -56,6 +58,7 @@
         "./lib/omnisharp-atom/views/codecheck-output-pane-view.ts",
         "./lib/omnisharp-atom/views/dock-view.ts",
         "./lib/omnisharp-atom/views/find-pane-view.ts",
+        "./lib/omnisharp-atom/views/find-symbols-view.ts",
         "./lib/omnisharp-atom/views/omni-output-pane-view.ts",
         "./lib/omnisharp-atom/views/rename-view.ts",
         "./lib/omnisharp-atom/views/status-bar-view.ts",
