--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,8 +59,12 @@
         "./lib/omnisharp-atom/views/codecheck-output-pane-view.ts",
         "./lib/omnisharp-atom/views/dock-view.ts",
         "./lib/omnisharp-atom/views/find-pane-view.ts",
+        "./lib/omnisharp-atom/views/find-pane-view.ts.BASE.ts",
+        "./lib/omnisharp-atom/views/find-pane-view.ts.LOCAL.ts",
+        "./lib/omnisharp-atom/views/find-pane-view.ts.REMOTE.ts",
         "./lib/omnisharp-atom/views/find-symbols-view.ts",
         "./lib/omnisharp-atom/views/omni-output-pane-view.ts",
+        "./lib/omnisharp-atom/views/react-client-component.ts",
         "./lib/omnisharp-atom/views/rename-view.ts",
         "./lib/omnisharp-atom/views/status-bar-view.ts",
         "./lib/omnisharp-atom/views/tooltip-view.ts",
