--- a/package.json
+++ b/package.json
@@ -83,8 +83,7 @@
     "semver": "^4.2.0",
     "through2": "^0.6.5",
     "tsd": "~0.6.0-beta.5",
-    "typescript": "^1.5.0-beta",
-    "vue": "~0.10.6"
+    "typescript": "^1.5.0-beta"
   },
   "consumedServices": {
     "status-bar": {
