Added more information to server information.  Added solution information for displaying information about solutions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,6 +57,7 @@
         "./lib/omnisharp-atom/features/package-restore.ts",
         "./lib/omnisharp-atom/features/rename.ts",
         "./lib/omnisharp-atom/features/server-information.ts",
+        "./lib/omnisharp-atom/features/solution-information.ts",
         "./lib/omnisharp-atom/linter.ts",
         "./lib/omnisharp-atom/omnisharp-atom.ts",
         "./lib/omnisharp-atom/views/build-output-pane-view.ts",
@@ -68,6 +69,7 @@
         "./lib/omnisharp-atom/views/omni-output-pane-view.ts",
         "./lib/omnisharp-atom/views/react-client-component.ts",
         "./lib/omnisharp-atom/views/rename-view.ts",
+        "./lib/omnisharp-atom/views/solution-status-view.ts",
         "./lib/omnisharp-atom/views/status-bar-view.ts",
         "./lib/omnisharp-atom/views/tooltip-view.ts",
         "./lib/omnisharp-atom/world.ts",
