--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
   "package-dependencies": {
     "language-csharp": ">=0.3.0",
     "linter": ">=0.12.0",
-    "atom-yeoman": ">=0.3.0"
+    "atom-yeoman": ">=0.3.0",
+    "advanced-new-file": ">=0.4.3"
   }
 }
