--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,6 +57,7 @@
         "./lib/omnisharp-atom/features/package-restore.ts",
         "./lib/omnisharp-atom/features/rename.ts",
         "./lib/omnisharp-atom/features/server-information.ts",
+        "./lib/omnisharp-atom/features/signature-help.ts",
         "./lib/omnisharp-atom/features/solution-information.ts",
         "./lib/omnisharp-atom/linter.ts",
         "./lib/omnisharp-atom/omnisharp-atom.ts",
@@ -69,6 +70,7 @@
         "./lib/omnisharp-atom/views/omni-output-pane-view.ts",
         "./lib/omnisharp-atom/views/react-client-component.ts",
         "./lib/omnisharp-atom/views/rename-view.ts",
+        "./lib/omnisharp-atom/views/signature-help-view.ts",
         "./lib/omnisharp-atom/views/solution-status-view.ts",
         "./lib/omnisharp-atom/views/status-bar-view.ts",
         "./lib/omnisharp-atom/views/tooltip-view.ts",
