--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
         "./lib/omni-sharp-server/view-model.ts",
         "./lib/omnisharp-atom/atom/dock.ts",
         "./lib/omnisharp-atom/atom/status-bar.ts",
+        "./lib/omnisharp-atom/atom/update-projects.ts",
         "./lib/omnisharp-atom/configure-rx.ts",
         "./lib/omnisharp-atom/dependency-checker.ts",
         "./lib/omnisharp-atom/features/build.ts",
