Reactor to use maps/weakmaps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
     ],
     "files": [
         "./lib/es6.d.ts",
+        "./lib/omni-sharp-server/atom-projects.ts",
         "./lib/omni-sharp-server/client-manager.ts",
         "./lib/omni-sharp-server/client.ts",
         "./lib/omni-sharp-server/composite-client.ts",
