--- a/package.json
+++ b/package.json
@@ -59,30 +59,29 @@
   "linter-package": true,
   "linter-implementation": "omnisharp-atom/linter",
   "dependencies": {
-    "ansi-to-html": "~0.1.0",
+    "ansi-to-html": "^0.3.0",
     "atom-package-dependencies": "https://github.com/basarat/atom-package-dependencies/archive/cb1.tar.gz",
     "atom-space-pen-views": "^2.0.5",
-    "bluebird": "~2.3.2",
+    "bluebird": "^2.9.30",
     "del": "^1.1.1",
     "escape-html": "^1.0.1",
-    "event-kit": "0.7.2",
+    "event-kit": "^1.2.0",
     "font-awesome": "^4.3.0",
     "fs-plus": "^2.3.1",
     "fuzzaldrin": "^2.1.0",
     "generator-aspnet": "0.0.35",
     "glob": "^5.0.5",
     "gulp": "^3.8.11",
-    "gulp-util": "^3.0.4",
+    "gulp-util": "^3.0.6",
     "jquery": "^2.1.1",
-    "lodash": "^3.6.0",
+    "lodash": "^3.9.3",
     "merge-stream": "^0.1.7",
-    "omnisharp-client": "^1.6.2",
+    "omnisharp-client": "^1.6.5",
     "react": "^0.13.3",
-    "request-promise": "~0.1.2",
     "rx": "^2.5.2",
     "semver": "^4.2.0",
-    "through2": "^0.6.5",
-    "tsd": "~0.6.0-beta.5",
+    "through2": "^2.0.0",
+    "tsd": "^0.6.3",
     "typescript": "^1.5.0-beta"
   },
   "consumedServices": {
